# NeonEngine

./: .gitignore  CMakeLists.txt  README.md
code/: build.bat  imgui_impl.cpp  imgui_impl.h  neon_GL.h  neon_debug.h  neon_game.cpp  neon_game.h  neon_math.cpp  neon_math.h  neon_mesh.cpp  neon_mesh.h  neon_opengl.cpp  neon_opengl.h  neon_platform.h  neon_primitive_mesh.cpp  neon_primitive_mesh.h  neon_renderer.cpp  neon_renderer.h  neon_sdl.cpp  neon_texture.cpp  neon_texture.h
code/core/: neon.cpp  neon.h  neon_GL.h  neon_allocator.cpp  neon_allocator.h  neon_bitmap.cpp  neon_bitmap.h  neon_font.cpp  neon_font.h  neon_math.h  neon_mesh.cpp  neon_mesh.h  neon_opengl.cpp  neon_opengl.h  neon_platform.h  neon_renderer.cpp  neon_renderer.h  neon_text.h
code/dear-imgui/: imconfig.h
code/game/: assetsystem.cpp  assetsystem.h  debugdraw.cpp  debugdraw.h  editor.cpp  editor.h  entitysystem.cpp  entitysystem.h  f_editor.cpp  f_editor.h  f_game.cpp  f_game.h  f_level.h  game.cpp  game.h  gamestate.h  item.h  level.h  map.cpp  map.h  mapdata.cpp  mapdata.h  neon_GL.h  neon_bitmap.cpp  neon_bitmap.h  neon_debug.cpp  neon_editor.cpp  neon_editor.h  neon_font.cpp  neon_font.h  neon_game.cpp  neon_game.h  neon_math.cpp  neon_math.h  neon_mesh.cpp  neon_mesh.h  neon_opengl.cpp  neon_opengl.h  neon_primitive_mesh.cpp  neon_primitive_mesh.h  (+12 more)
code/imgui/: imconfig.h
code/platform/: imgui_impl.cpp  neon_platform.h  neon_sdl.cpp  neon_sdl.h
data/: AlphaAtlas.tga  Assets.xml  Atlas.tga  Data.xml  FontAtlas.tga  Level.xml  Tileset.xml  basic_ps.glsl  chain_mail2.tga  character_main.tga  default_tile.tga  imgui.ini  levels.xml  pixel_wall.tga  red_wall_1.tga  red_wall_2.tga  red_wall_3.tga  uv_texture.tga
data/font/: dbg_font_26.fnt  dbg_font_26_0.tga
data/model/: suzanne.fbx  suzanne.mtl
data/models/: hex.fbx  suzanne.fbx
data/models/lucy/: lucy.fbx
data/shader/: color_quad.fs  color_quad.vs  line.fs  text.fs  text.vs  text_vs.glsl  texture_quad.fs  texture_quad.vs
data/shaders/: basic_ps.glsl  basic_vs.glsl  color_quad.vs  debug_line_ps.glsl  debug_line_vs.glsl  debug_rect_ps.glsl  line.vs  pbr_ps.glsl  pbr_vs.glsl  sprite_ps.glsl  sprite_vs.glsl  text.vs  text_ps.glsl  texture_quad.fs  texture_quad.vs  water_ps.glsl  water_vs.glsl
data/snake/: fruit.tga  snake_body_down.tga  snake_body_left.tga  snake_body_right.tga  snake_body_up.tga  snake_head_down.tga  snake_head_left.tga  snake_head_right.tga  snake_head_up.tga
data/sprites/: T.tga  cavesofgallet_tiles.tga  white_texture.tga
lib/x64/: assimp-vc140-mt.exp  assimp-vc140-mt.lib
misc/: Settings.cap  gltrace.bat  neon.sublime-project  neon.sublime-workspace  neon_sdl.sln  rdoc.cap  renderdoc.cap  shell.bat
